@@ -4,8 +4,8 @@
 ## Filename:    start-consumer.sh
 ## Description: to start consumer
 ## Version:     1.0
-## Author:      lidiliang
-## Created:     2017-08-03
+## Author:      chenke
+## Created:     2017-11-16
 ################################################################################
 #set -x  ## 用于调试用，不用的时候可以注释掉
 
@@ -18,9 +18,24 @@ cd ..
 DEPLOY_DIR=`pwd`
 CONF_DIR=$DEPLOY_DIR/conf    ### 项目根目录
 LIB_DIR=$DEPLOY_DIR/lib        ## Jar 包目录
-LIB_JARS=`ls $LIB_DIR|grep .jar|awk '{print "'$LIB_DIR'/"$0}'|tr "\n" ":"`   ## jar 包位置以及第三方依赖jar包，绝对路径
+LIB_JARS=`ls $LIB_DIR|grep .jar| grep -v elasticsearch-1.0.jar \
+| grep -v avro-ipc-1.7.7-tests.jar | grep -v avro-ipc-1.7.7.jar | grep -v spark-network-common_2.10-1.5.1.jar | \
+grep -v zookeeper-3.5.1-alpha.jar |awk '{print "'$LIB_DIR'/"$0}'|tr "\n" ":"`   ## jar包位置以及第三方依赖jar包，绝对路径
 LOG_DIR=${DEPLOY_DIR}/logs                       ## log 日记目录
-LOG_FILE=${LOG_DIR}/consumer.log        ##  log 日记文件
+if [ $# != 3 ]; then
+    echo "sh ***.sh photoPath jsonFile ***.log";
+    exit 0;
+fi
+PHOTO_PATH=$1
+LOG_FILE_NAME=$3
+JSON_DIR=${DEPLOY_DIR}/json
+if [ ! -d $JSON_DIR ]; then
+        mkdir $JSON_DIR;
+fi
+JSON_FILE=$JSON_DIR/$2
+
+LOG_FILE=${LOG_DIR}/${LOG_FILE_NAME}      ##  log 日记文件
+
 
 #####################################################################
 # 函数名: start_consumer
@@ -34,7 +49,7 @@ function start_consumer()
     if [ ! -d $LOG_DIR ]; then
         mkdir $LOG_DIR;
     fi
-    nohup java -server -Xms2g -Xmx4g  -XX:PermSize=512m -XX:MaxPermSize=512m  -classpath $CONF_DIR:$LIB_JARS com.hzgc.ftpserver.kafka.consumer.ConsumerGroupsMain > ${LOG_FILE} 2>&1 &
+    java -classpath $CONF_DIR:$LIB_JARS com.hzgc.hbase.putdata.putCriminalToHbase  $PHOTO_PATH  $JSON_FILE | tee -a  ${LOG_FILE}
 }
 
 #####################################################################
